--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,8 @@
     "nodemon": "^1.11.0"
   },
   "dependencies": {
-    "body-parser": "^1.17.1",
+    "apollo-server": "^2.0.0-beta.2",
     "express": "^4.15.2",
-    "graphql": "^0.9.1",
-    "graphql-server-express": "^0.6.0",
-    "graphql-tools": "^0.10.1"
+    "graphql": "^0.13.2"
   }
 }
