--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tutorial-server",
-  "version": "1.0.0",
+  "name": "server",
+  "version": "2.0.0",
   "description": "A simple GraphQL server",
   "main": "server.js",
   "scripts": {
