--- a/client/package.json
+++ b/client/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "dependencies": {
     "apollo-boost": "^0.1.6",
+    "apollo-utilities": "^1.0.12",
     "graphql": "^0.13.2",
     "react": "^16.3.2",
     "react-apollo": "^2.1.0-beta.3",
     "react-dom": "^16.3.2",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
